@@ -110,7 +110,6 @@ BEGIN
     PUSHBUTTON      "Toggle &BG Out",IDC_SNDTOBG,458,131,53,14
     PUSHBUTTON      "P&osition",IDC_SNDPOSITION,458,148,53,14
     CONTROL         "Use name",IDC_CHECK_RENAME_ON_EXPORT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,458,166,52,10
-    CONTROL         "",IDC_STATIC,"Static",SS_BLACKFRAME,0,0,20,20
     LTEXT           "on export",IDC_STATIC,469,175,30,8
 END
 
